added whoami to about section and added some badges to md

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,12 @@ button:hover { cursor: pointer; }
 
 /* code */
 code {
-    
+    background-color: beige;
+
+    margin: 10pt;
+    padding: 5pt;
+
+    border-radius: 3pt;
 }
 
 /* ---- navigation ---- */
